// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94373.82458252949,
  "path": Array [
    StartEvent {
      "point": Array [
        6.917970423726742,
        51.12764467984819,
      ],
      "time": 1500300414931.921,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.28125,
        50.989016666666664,
      ],
      "time": 1500306180000,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": Array [
        6.1937500000000005,
        51.1723,
      ],
      "time": 1500308465000,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "path": Array [
    StartEvent {
      "point": Array [
        6.931349782770248,
        51.08473062172237,
      ],
      "time": 1500303056825.0186,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.2829,
        50.996633333333335,
      ],
      "time": 1500305067000,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": Array [
        6.194816666666667,
        51.173249999999996,
      ],
      "time": 1500306715000,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": Array [
        6.6080499999999995,
        50.96866666666667,
      ],
      "time": 1500308407000,
      "type": "turn",
    },
    FinishEvent {
      "point": Array [
        7.008423480016633,
        51.09851259802531,
      ],
      "time": 1500309550837.2544,
      "type": "finish",
    },
  ],
  "speed": 75.6258314792126,
  "time": 6494.012235839844,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52735.15992428783,
  "path": Array [
    StartEvent {
      "point": Array [
        6.914785463652349,
        51.13786038310546,
      ],
      "time": 1500301028833.1543,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.2829,
        50.996633333333335,
      ],
      "time": 1500305067000,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "path": Array [
    StartEvent {
      "point": Array [
        6.931349782770248,
        51.08473062172237,
      ],
      "time": 1500303056825.0186,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.2829,
        50.996633333333335,
      ],
      "time": 1500305067000,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": Array [
        6.194816666666667,
        51.173249999999996,
      ],
      "time": 1500306715000,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": Array [
        6.6080499999999995,
        50.96866666666667,
      ],
      "time": 1500308407000,
      "type": "turn",
    },
    FinishEvent {
      "point": Array [
        7.008423480016633,
        51.09851259802531,
      ],
      "time": 1500309550837.2544,
      "type": "finish",
    },
  ],
  "speed": 75.6258314792126,
  "time": 6494.012235839844,
}
`;
